<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_learn_java_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:activity=".LearnJavaActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarLearnJava"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="end"
                android:background="?android:colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageButton
                        android:id="@+id/settings_icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:onClick="settingsOnClick"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/action_settings"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/margin"
                        android:src="@drawable/settings_icon" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Actual activity content -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:activity=".LearnJavaActivity"
            tools:showIn="@layout/activity_learn_java">

            <LinearLayout
                android:id="@+id/showMenuView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/courses"
                    app:srcCompat="@drawable/pointer_arrow_up" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:text="@string/open_drawer_for_exam_prompt"
                    android:textColor="@color/colorAccentOrange"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <!-- The main view -->
            <RelativeLayout
                android:id="@+id/learnJavaMainView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginTop="@dimen/starter_view_margin"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/startedView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/continue_where_you_left_off"
                        android:textAppearance="@style/title" />

                    <Button
                        android:id="@+id/continueLearningButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:onClick="continueLearningOnClick"
                        tools:text="Chapter name" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notStartedView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin"
                            android:layout_weight="1"
                            android:text="@string/before_you_start"
                            android:textSize="@dimen/medium_text_size" />

                        <ImageButton
                            android:id="@+id/guideButton"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_weight="1"
                            android:contentDescription="@string/guide"
                            android:onClick="guideButtonOnClick"
                            app:srcCompat="@drawable/info_icon" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/startLearningButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_weight="1"
                        android:onClick="continueLearningOnClick"
                        android:visibility="visible"
                        tools:visibility="gone"
                        android:text="@string/start_learning" />
                </LinearLayout>

                <!-- Shown until the last chapter is loaded. -->
                <ProgressBar
                    android:id="@+id/loadingView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <!-- The layout for background images -->
            <RelativeLayout
                android:id="@+id/backgroundImagesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- The swipe prompt icon -->
            <ImageView
                android:id="@+id/touchIcon"
                tools:visibility="visible"
                android:visibility="gone"
                android:contentDescription="@string/swipe_horizontally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/touch_icon"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/huge_margin"
                android:layout_marginBottom="@dimen/huge_margin"/>
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/view_nav_header"
        app:menu="@menu/learn_java_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
