<resources>
    <!-- General -->
    <string name="app_name">Java Programming</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Learn Java</string>
    <string name="nav_header_subtitle">Browse courses, take exams</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
...
    <string name="dark_theme">Dark</string>
    <string name="screen">Screen</string>
    <string name="keep_awake_description">Prevent screen from turning off</string>
    <string name="auto_open_unlocked_content_description">Automatically slide open unlocked content</string>

    <!-- Guide -->
    <string name="guide_not_read">You haven\'t read the Guide yet! Do you want to read it now?</string>

    <!-- ClipSync -->
    <string name="clip_sync">ClipSync</string>
    <string name="clip_sync_intro">Share your phone\'s clipboard with your computer\'s to easily transfer code samples between the two!</string>
    <string name="get_started">Get started</string>
    <string name="get_started_info_1">The app has built in support for ClipSync! Download the pairing app for your computer from my GitHub:</string>
...
